# uni-gtw

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build.yml
components/cosmo/: CMakeLists.txt  cosmo.c
components/cosmo/include/: cosmo.h
components/cosmo/include/cosmo/: cosmo.h
components/cosmo/test/: CMakeLists.txt  Makefile  test_cosmo.c
docs/: docusaurus.config.ts  package-lock.json
docs/docs/: intro.mdx
docs/docs/installation/: _category_.json  flashing_firmware.mdx  supported_hardware.mdx
docs/docs/usage/: _category_.json  advanced_options.md  integration_with_homeassistant.md  pairing_devices.md
docs/src/pages/: index.tsx
docs/static/img/: .part
main/: CMakeLists.txt  background_worker.c  background_worker.h  cc1101.c  cc1101.h  channel.c  channel.h  config.c  config.h  console.c  cosmo.c  cosmo.h  idf_component.yml  mqtt.c  mqtt.h  radio.c  radio.h  radio_ops.h  schema.json-gen-c  schema_config.json-gen-c  schema_mqtt_messages.json-gen-c  schema_ws_messages.json-gen-c  status_led.c  status_led.h  sx1262.c  sx1262.h  uni-gtw.c  utils.c  utils.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
main/web/: .oxlintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
main/web/src/: App.tsx  AuthContext.ts  AuthGuard.tsx  Button.tsx  ChannelCard.tsx  ChannelForm.tsx  Channels.tsx  Chip.tsx  Collapsible.tsx  Console.tsx  Dropdown.tsx  Modal.tsx  PasswordModal.tsx  Settings.tsx  Tabs.tsx  TopBar.tsx  WifiModal.tsx  channelTypes.ts  icons.tsx  style.css  useWebsocket.tsx  wsTypes.ts
main/web/src/ui/: Alert.tsx  Chip.tsx  Collapsible.tsx  Dropdown.tsx  Modal.tsx
test/: Makefile  cosmo_test  cosmo_test.c
